# dev-mem

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
dev_mem/: __init__.py  cli.py  cli_helpers.py  db.py  install.py  settings.py
dev_mem/analyzer/: __init__.py  context_builder.py  daily_summary.py  error_patterns.py  prompt_scorer.py
dev_mem/analyzer/rules/: __init__.py  decision_missing.py  long_session.py  low_prompt_day.py  no_commit_3days.py  repeated_cmd_fail.py  same_error_3x.py  same_error_5x.py  vague_commit.py
dev_mem/collectors/: __init__.py  claude_code.py  compact.py  files.py  git.py  sensitive_filter.py  session_start.py  session_stop.py  terminal.py  user_prompt.py
dev_mem/hooks/: install.sh  post-commit
dev_mem/mcp/: __init__.py  server.py
dev_mem/memory/: __init__.py  cli_memory.py  context_injector.py  migrate_claude_mem.py  observations.py  session_tracker.py
dev_mem/web/: app.py
dev_mem/web/static/: style.css
dev_mem/web/templates/: analytics.html  base.html  daily.html  errors.html  export.html  index.html  learnings.html  map.html  memory.html  project_detail.html  projects.html  prompts.html  skills.html  team.html  tokens.html
migrations/: 001_initial.py  002_memory.py  003_projects_meta.py  004_agent_skill_calls.py  005_token_tracking.py
